--- a/bio.html
+++ b/bio.html
@@ -40,12 +40,12 @@
 				 <li class="nav-item">
 				 	<a class="nav-link" href="https://ioadeer.github.io/blog">Blog</a>
 				 </li>
-					<li class="nav-link">
-						<a class="git-ic mr-3" role="button" href="https://github.com/ioadeer"><i class="fab fa-lg fa-github"></i></a>
-						<a class="git-ic mr-3" role="button" href="https://joaquincervino.bandcamp.com"><i class="fab fa-lg fa-bandcamp"></i></a>
-						<a class="git-ic mr-3" role="button" href="https://soundcloud.com/cjoakin"><i class="fab fa-lg fa-soundcloud"></i></a>
-						<a class="git-ic mr-3" role="button" href="https://www.instagram.com/ioadeer/"><i class="fab fa-lg fa-instagram"></i></a>
-					</li>
+				<li class="nav-link">
+					<a class="git-ic mr-3" role="button" href="https://github.com/ioadeer"><i class="fab fa-lg fa-github"></i></a>
+					<a class="git-ic mr-3" role="button" href="https://joaquincervino.bandcamp.com"><i class="fab fa-lg fa-bandcamp"></i></a>
+					<a class="git-ic mr-3" role="button" href="https://soundcloud.com/cjoakin"><i class="fab fa-lg fa-soundcloud"></i></a>
+					<a class="git-ic mr-3" role="button" href="https://www.instagram.com/ioadeer/"><i class="fab fa-lg fa-instagram"></i></a>
+				</li>
  				</ul>
 		</div>
 
@@ -55,30 +55,33 @@
 		  	<p>Musician, sound artist</p>
 			</div>
 			<div>
-				<iframe style="border: 0; width: 350px; height: 470px;" src="https://bandcamp.com/EmbeddedPlayer/album=1653172984/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/transparent=true/" seamless><a href="http://joaquincervino.bandcamp.com/album/xenolinguistics">Xenolinguistics by Joaquin Cerviño</a></iframe>
-				<iframe style="border: 0; width: 350px; height: 470px;" src="https://bandcamp.com/EmbeddedPlayer/album=4033611196/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/transparent=true/" seamless><a href="http://joaquincervino.bandcamp.com/album/en-hommage">en hommage à 刀根 康尚 by Joaquin Cerviño</a></iframe>
-				<iframe style="border: 0; width: 350px; height: 470px;" src="https://bandcamp.com/EmbeddedPlayer/album=4147295244/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/transparent=true/" seamless><a href="http://joaquincervino.bandcamp.com/album/cendre">cendre by Joaquin Cerviño</a></iframe>
-				<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/294145405&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+				<p> 
+					I am a musician and sound artist. I believe poetry melted down on an asemic
+					plaster which we use to cover the unbearable meaning of life. This strange
+					material would distill into sound and image indifferently. 
+					My personal interests are music, sound, programming, generative art. 
+				</p>
 			</div>
 		</div>
 		<!-- Footer -->
 		<footer class="page-footer font-small special-color-dark pt-4 fixed-bottom">
 		
 		  <!-- Footer Elements -->
-		  <div class="container" id="reg">
+		  <div class="container content-desktop" id="reg">
 		
 		    <!-- Social buttons -->
-				<!-- <div class="social-buttons-list">
+				<!--
+				<div class="social-buttons-list">
 		    	<ul  class="list-unstyled list-inline text-center" >
 		    	  <li class="list-inline-item">
-		    	    <a href="https://joaquincervino.bandcamp.com" class="btn-floating btn-fb mx-1">
-		    	      <i class="fab fa-bandcamp"> </i>
+							<a href="https://joaquincervino.bandcamp.com" class="btn-floating btn-fb mx-1"> 
+								<i class="fab fa-bandcamp"> </i> 
 		    	    </a>
 		    	  </li>
 		    	  <li class="list-inline-item">
 		    	    <a href="https://github.com/ioadeer" class="btn-floating btn-tw mx-1">
 		    	      <i class="fab fa-github"> </i>
-		    	    </a>
+							</a> 
 		    	  </li>
 		    	  <li class="list-inline-item">
 		    	    <a href="https://soundcloud.com/cjoakin" class="btn-floating btn-gplus mx-1">
@@ -91,7 +94,8 @@
 		    	    </a>
 		    	  </li>
 		    	</ul>
-				</div> -->
+				</div>
+				-->
 		    <!-- Social buttons -->
 		
 		  </div>
