--- a/bio.html
+++ b/bio.html
@@ -56,9 +56,7 @@
 			</div>
 			<div>
 				<p> 
-					I am a musician and sound artist. I believe poetry melted down on an asemic
-					plaster which we use to cover the unbearable meaning of life. This strange
-					material would distill into sound and image indifferently. 
+					I am a musician and sound artist. 
 					My personal interests are music, sound, programming, generative art. 
 				</p>
 			</div>
