--- a/music.html
+++ b/music.html
@@ -26,7 +26,7 @@
 				 	<a class="nav-link" href="./index.html">Home</a>
 				 </li>
 				 <li class="nav-item">
-				 	<a class="nav-link" href="#">Bio</a>
+				 	<a class="nav-link" href="./bio.html">Bio</a>
 				 </li>
 				 <li class="nav-item">
 				 	<a class="nav-link" href="./music.html">Music</a>
